{
    "version": 1,
    "name": "InputAttackKey",
    "maps": [
        {
            "name": "Attack",
            "id": "889ae46c-d64e-4ea0-b92d-af3ba26e3107",
            "actions": [
                {
                    "name": "BasicAttack",
                    "type": "Button",
                    "id": "ae04129a-f8c0-4293-9474-0310db0437a6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeForm",
                    "type": "Button",
                    "id": "e8fb2c3d-2a29-4c1d-8700-0fbd77ce2838",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "be932f62-1756-4f5b-b863-2f751d460ecb",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BasicAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a45c5440-674c-44a7-8dab-0e4d772a0c5a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeForm",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}